# libisbn

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
libisbn/: CMakeLists.txt  libisbn.cpp  libisbn.hpp
libisbn/include/: libisbn.hpp
pylibisbn/: pylibisbn.cpp
pylibisbn/py_package/: MANIFEST.in  setup.py  setup.py.in
pylibisbn/py_package/pylibisbn/: __init__.py
pylibisbn/py_package/tests/: test_main.py
tests/: tests.cpp
